Roman_Lapitski/13.Kubernetes.manifest/lazy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
  labels:
    app: simple-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: lazylibrarian
        image: ghcr.io/linuxserver/lazylibrarian
        ports:
        - containerPort: 5299
        resources:
          requests:
            cpu: 50m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 500Mi
        volumeMounts:
        - name: persistent-storage01
          mountPath: "/config"
        - name: persistent-storage02
          mountPath: "/downloads"       
      volumes:
      - name: persistent-storage01
        persistentVolumeClaim:
          claimName: app01-pv-claim 
      - name: persistent-storage02
        persistentVolumeClaim:
          claimName: app02-pv-claim             
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: hotio/sonarr
        ports:
        - containerPort: 8989
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        volumeMounts:
        - name: persistent-storage
          mountPath: "/config"       
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: app03-pv-claim 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: hotio/radarr
        ports:
        - containerPort: 7878
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        volumeMounts:
        - name: persistent-storage
          mountPath: "/config"       
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: app04-pv-claim 
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
  labels:
    run: simple-web-service
spec:
  type: LoadBalancer
  ports:
  - port: 5299
    protocol: TCP
  selector:
    app: simple-web
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-service
  labels:
    run: sonar-service
spec:
  type: LoadBalancer
  ports:
  - port: 8989
    protocol: TCP
  selector:
    app: sonarr
---
apiVersion: v1
kind: Service
metadata:
  name: radar-service
  labels:
    run: radar-service
spec:
  type: LoadBalancer
  ports:
  - port: 7878
    protocol: TCP
  selector:
    app: radarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-sa
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: lazy.k8s-11.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-web-service
          servicePort: 5299
  - host: sonar.k8s-11.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: sonar-service
          servicePort: 8989
  - host: radar.k8s-11.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: radar-service
          servicePort: 7878
